--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
-			<version>3.3.4</version> <!-- Ensure compatibility with your Spring Boot version -->
+			<version>3.3.4</version>
 		</dependency>
 
 		<dependency>
