--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,20 @@
 spring.application.name=demo
-
 # Data Source Properties
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
 # JPA Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.hibernate.ddl-auto=update
-
+# RabbitMQ properties
+spring.rabbitmq.host=localhost
+spring.rabbitmq.virtual-host=vhost
+spring.rabbitmq.password=guest
+spring.rabbitmq.username=guest
+server.port=8081
 # Logging Properties
 logging.level.org.hibernate.SQL=TRACE
 logging.level.org.hibernate.type.descriptor=TRACE
