--- a/src/main/docker-compose.yml
+++ b/src/main/docker-compose.yml
@@ -1,15 +1,17 @@
-version: '3.8'
-
 services:
   rabbitmq:
     image: rabbitmq:management
     ports:
       - "5672:5672"
       - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_VHOST: vhost
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
 
   producer:
     build:
-      context: C:\projects\demo
+      context: C:/projects/demo
       dockerfile: Dockerfile
     ports:
       - "8081:8081"
@@ -18,10 +20,14 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
       SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.PostgreSQLDialect
 
   consumer:
     build:
-      context: C:\projects\rabbitmqconsumerdemo
+      context: C:/projects/rabbitmqconsumerdemo
       dockerfile: Dockerfile
     ports:
       - "8082:8082"
+
+volumes:
+  rabbitmq_data:
