--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ logging.level.org.hibernate.SQL=TRACE
 logging.level.org.hibernate.type.descriptor=TRACE
 logging.level.root=WARN
 logging.level.org.springframework=INFO
+management.endpoints.web.exposure.include=health,info
