--- a/src/main/docker-compose.yml
+++ b/src/main/docker-compose.yml
@@ -8,6 +8,11 @@ services:
       RABBITMQ_DEFAULT_VHOST: vhost
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   producer:
     build:
@@ -21,13 +26,24 @@ services:
       SPRING_DATASOURCE_PASSWORD: postgres
       SPRING_RABBITMQ_HOST: rabbitmq
       SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.PostgreSQLDialect
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   consumer:
     build:
       context: C:/projects/rabbitmqconsumerdemo
       dockerfile: Dockerfile
-    ports:
-      - "8082:8082"
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
+    depends_on:
+      producer:
+        condition: service_healthy
 
 volumes:
   rabbitmq_data:
